# interpreting-LLM-alignment

./: README.md  arc_gpu_job.slurm  pyproject.toml  reproduce_blog_post.py  rlhf_activation_patching.py  rlhf_activation_patching.slurm
0_reproduce_blog_post/: README.md  pyproject.toml
