[project]
name = "interpreting-llm-alignment"
version = "0.1.0"
description = "Exploring mechanistic interpretaility for RLHF"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "datasets>=4.1.1",
    "matplotlib>=3.10.6",
    "transformer-lens>=2.16.1",
    "transformers>=4.57.0",
    "trl>=0.23.1",
]
